--- a/NYC_Livability_Index_3.html
+++ b/NYC_Livability_Index_3.html
@@ -71,10 +71,10 @@
     <div id="controls">
         <h2>Trait Importance</h2>
         <label>Transit/Accessibility <input type="range" id="transit_index" min="0" max="1" step="0.01"></label>
-        <label>Restaurants <input type="range" id="restaurant_index" min="0" max="1" step="0.01"></label>
+        <label>Restaurant Safety <input type="range" id="restaurant_index" min="0" max="1" step="0.01"></label>
         <label>Health <input type="range" id="health_index" min="0" max="1" step="0.01"></label>
         <label>Housing <input type="range" id="housing_index" min="0" max="1" step="0.01"></label>
-        <label>Crime <input type="range" id="crime_index" min="0" max="1" step="0.01"></label>
+        <label>Safety <input type="range" id="crime_index" min="0" max="1" step="0.01"></label>
     </div>
 
     <div id="regionSelector">
@@ -91,10 +91,10 @@
         <select id="trait">
             <option value="weightedValue">Overall Score</option>
             <option value="transit_index">Transit/Accessibility</option>
-            <option value="restaurant_index">Restaurants</option>
+            <option value="restaurant_index">Restaurant Safety</option>
             <option value="health_index">Health</option>
             <option value="housing_index">Housing</option>
-            <option value="crime_index">Crime</option>
+            <option value="crime_index">Safety</option>
         </select>
     </div>
     <div id="container">
@@ -111,7 +111,7 @@
     Factors included in each trait is listed below. </p>
     <p> Transit: Subway Stations, Covered Bus Stops, and Public Bicycle Parking </p>
     <p> Restaurant Safety: Number of Restaurants, Violations, Closures, Health Grade </p>
-    <p> Crime: Felonies, Misdemeanors, Violations </p>
+    <p> Safety: Felonies, Misdemeanors, Violations </p>
     <p> Health: Influenza/Pneumonia Admissions, EMS Incidents, Water Inspections, Rodent Inspections </p>
     <p> Housing: Average Rent Prices, Housing Violations </p>
     <h3> Data Sources: </h3>
@@ -220,13 +220,13 @@
                         .style("top", (d3.event.pageY - 30) + "px")
                         .style("display", "block")
                         .html(`Borough: ${csvRow.BoroName}<br>
-                   Neighboorhood: ${csvRow.NTAName}<br>
+                   Neighborhood: ${csvRow.NTAName}<br>
                    Overall Score: ${parseFloat(csvRow.weightedValue).toFixed(2)}<br>
                    Transit/Accessibility: ${parseFloat(100 * csvRow.transit_index).toFixed(2)}<br>
-                   Restaurants: ${parseFloat(100 * csvRow.restaurant_index).toFixed(2)}<br>
+                   Restaurant Safety: ${parseFloat(100 * csvRow.restaurant_index).toFixed(2)}<br>
                    Health: ${parseFloat(100 * csvRow.health_index).toFixed(2)}<br>
                    Housing: ${parseFloat(100 * csvRow.housing_index).toFixed(2)}<br>
-                   Crime: ${parseFloat(100 * csvRow.crime_index).toFixed(2)}<br>
+                   Safety: ${parseFloat(100 * csvRow.crime_index).toFixed(2)}<br>
                    GEOID: ${csvRow.census_tract_geoid}
                    `);
                 }
@@ -368,9 +368,11 @@
                     }
                 });
                 maxCalculatedValue = d3.max(filteredData, row => {
-                    return values.reduce((acc, val, index) => {
-                        return acc + val * row[Object.keys(row)[index + 1]];
-                    }, 0) / values.length;
+                    const weightedValues = values.map((val, index) => {
+                        return val * row[Object.keys(row)[index + 1]];
+                    });
+                    const averageWeightedValue = weightedValues.reduce((acc, val) => acc + val, 0) / weightedValues.length;
+                    return averageWeightedValue;
                 });
                 console.log(maxCalculatedValue)
 
@@ -380,11 +382,11 @@
 
                     if (csvRow) {
                         if (borough === "all_boro" || csvRow.BoroName.trim().toLowerCase() === borough) {
-                            const weightedValue = (values.reduce((acc, val, index) => {
+                            const averageWeightedValue = (values.reduce((acc, val, index) => {
                                 return acc + val * csvRow[Object.keys(csvRow)[index + 1]];
                             }, 0) / values.length) * 100 / maxCalculatedValue;
 
-                            csvRow.weightedValue = Math.min(100, Math.max(0, weightedValue));
+                            csvRow.weightedValue = Math.min(100, Math.max(0, averageWeightedValue));
 
                             return colorScale(csvRow.weightedValue / 100);
                         } else {
@@ -401,9 +403,9 @@
                 topTenList.html("<h3>Top Ten List</h3>");
                 for (let i = 0; i < Math.min(10, filteredData.length); i++) {
                     if (trait === "weightedValue") {
-                        topTenList.append("p").html(`Borough: ${filteredData[i].BoroName}, Neighboorhood: ${filteredData[i].NTAName}, Score: ${parseFloat(filteredData[i][trait]).toFixed(2)}`);
+                        topTenList.append("p").html(`Borough: ${filteredData[i].BoroName}, Neighborhood: ${filteredData[i].NTAName}, Score: ${parseFloat(filteredData[i][trait]).toFixed(2)}`);
                     } else {
-                        topTenList.append("p").html(`Borough: ${filteredData[i].BoroName}, Neighboorhood: ${filteredData[i].NTAName}, Score: ${parseFloat(100 * filteredData[i][trait]).toFixed(2)}`);
+                        topTenList.append("p").html(`Borough: ${filteredData[i].BoroName}, Neighborhood: ${filteredData[i].NTAName}, Score: ${parseFloat(100 * filteredData[i][trait]).toFixed(2)}`);
                     }
                 }
             }
