--- a/index.html
+++ b/index.html
@@ -164,8 +164,8 @@
         }
 
         async function loadData() {
-            const geojsonData = await d3.json("Code/nyc_geojson.json");
-            const csvData = await d3.csv("Code/Test_Files/Final/final_index.csv");
+            const geojsonData = await d3.json("Data/nyc_geojson.json");
+            const csvData = await d3.csv("Data/final_index.csv");
 
             csvData.forEach(csvRow => {
                 const geoJsonFeature = geojsonData.features.find(feature => feature.properties.GEOID === csvRow.census_tract_geoid);
@@ -415,4 +415,3 @@
 </body>
 
 </html>
-
